prefetched-manifests/dashboard/modules/mlflow/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mlflow-allow-ports
spec:
  podSelector:
    matchLabels:
      deployment: mlflow-ui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 8343
          protocol: TCP
      from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
        - podSelector:
            matchLabels:
              deployment: gen-ai-ui
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 6443
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
